@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19940723
+MANIFEST for ded, version t19940726
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
